--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
+    "@tanstack/react-query": "^5.51.18",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "react": "^18.3.1",
