--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
     "@tanstack/react-query": "^5.51.18",
+    "dompurify": "^3.1.6",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
+    "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
