--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@assets/*": ["src/assets/*"],
       "@styles/*": ["src/styles/*"],
       "@constants/*": ["src/constants/*"]
-    }
+    },
+    "types": ["jest", "@testing-library/jest-dom"]
   }
 }
